# sample-cpp-template

./: CMakeLists.txt  Dockerfile  main.cpp
.devcontainer/: devcontainer.json
_dep/: spdlog.cmake
config/: configure.h.in
docker_files/: sources.list
include/: CMakeLists.txt  JumpGame2.h  configure.h
include/algor/: CMakeLists.txt  algor.cpp  algor.h
src/: JumpGame2.cpp
test/: CMakeLists.txt  algor_test.cpp  char8_t_test.cpp  concepts.test.cpp  jump2_test.cpp
